crates/gpui-form-macros/tests/ui/fail/invalid_array_id_syntax.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
struct Example {
    #[form(array(id = item_id))]
    items: Vec<Item>,
}

struct Item;

fn main() {}
